# Learning-Deno

./: .gitignore  README  README.md  deno.json  main.ts
DenoBabel/: main.ts
IMAP/deno-imap/: index.ts
foreingFunction/: Cargo.toml  README.md  deno.json  hello.ts  jmap_client.ts
foreingFunction/advanced-ffi/: Cargo.toml  README.md  client.ts  deno.json
foreingFunction/advanced-ffi/src/: lib.rs
foreingFunction/image-processing/: Cargo.toml  README.md  client.ts  deno.json
foreingFunction/image-processing/src/: lib.rs
foreingFunction/src/: lib.rs
fresh-project/: package-lock.json  package.json
fresh-project/components/: Button.tsx
jmap_ffi_runtime/: Cargo.toml
jmap_ffi_runtime/src/: lib.rs
nativeWindowMac/foo.app/: foo
nativeWindowMac/simple-app/: README.md  deno.json  main.ts
nativeWindowMac/simple-app/simple-app.app/Contents/: Info.plist
observablePlot/: README.md  deno.json  main.ts  plot.js  plot.ts
scripts/BundlerMacOsApp/: README.md  bundle.ts  main.ts
