[package]
name = "jmap-ffi-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "jmap_ffi_runtime"
crate-type = ["cdylib"]

[dependencies]
jmap_proto = { path = "/Users/christiannogueras/Documents/Personal projects/Learning /Low Level Programming/Rust/stalwart/crates/jmap-proto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] } 